--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
         <link rel="stylesheet" href="src/css/color.css">
         <link rel="stylesheet" href="src/css/great.css" media="screen and (min-width: 550px)">
         <link rel="stylesheet" href="src/css/small.css" media="screen and (max-width: 549px)">
-        <title>CloudCoding</title>
+        <title>CloudCoding - Desarollo Web</title>
+        <meta name="description" content="Hola! Somos CloudCoding, tu blog de confianza que te enseñará todo sobre el Desarrollo Web, desde HTML, CSS, Javascript, a SEO, PHP, Bases de Datos">
     </head>
     <body>
         <header>
-            <img src="src/imagenes/logo.png" alt="logo.png">
+            <a href="https://cloudcoding-ar.github.io/servicios.html"><img src="src/img/logo.png" alt="logo.png"></a>
             <h1>¡Bienvenido a CloudCoding!</h1>
         </header>
         <nav>
             <div class="display-great display-small" id="barra-navegacion">
                 <h2>Menú</h2>
                 <ul class="no-style horizontal">
-                    <li><a href="index.html">Página Principal</a></li>
+                    <li><a href="https://cloudcoding-ar.github.io/">Página Principal</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="https://www.paypal.com/paypalme/lukitazr"><img src="" alt=""></a></li>
                 </ul>
