--- a/servicios.html
+++ b/servicios.html
@@ -13,7 +13,7 @@
     
     <body>
         <header>
-            <img src="src/imagenes/logo.png" alt="logo.png">
+            <img src="src/img/logo.png" alt="logo.png">
             <h1><strong>Servicios</strong></h1>
         </header>
     
@@ -21,7 +21,7 @@
             <div class="display-great display display-small" id="barra-navegacion">
                 <h2>Menú</h2>
                 <ul class="no-style horizontal">
-                    <li><a href="index.html">Página Principal</a></li>
+                    <li><a href="https://cloudcoding-ar.github.io">Página Principal</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
                     <li><a href="https://www.paypal.com/paypalme/lukitazr"></a></li>
                 </ul>
