--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <link rel="stylesheet" href="src/css/small.css" media="screen and (max-width: 549px)">
         <title>CloudCoding - Desarollo Web</title>
         <meta name="description" content="Hola! Somos CloudCoding, tu blog de confianza que te enseñará todo sobre el Desarrollo Web, desde HTML, CSS, Javascript, a SEO, PHP, Bases de Datos">
+        <meta name="thumbnail" content="https://cloudcoding-ar.github.io/src/img/logo.png" />
+        <meta name="keywords" content="SEO, HTML, XHTML, SEO, PHP, JavasCript, CSS, Desarrollo, Web, Desarrollo Web, Programacion">
+        <meta name="author" content="Luca Ramirez" />
+        <meta name="copyright" content="Luca Ramirez-2023" />
+        <link rel="icon" href="src/img/logo.png" type="image/png" />
     </head>
     <body>
         <header>
