--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <header>
-            <a href="https://cloudcoding-ar.github.io/servicios.html"><img src="src/img/logo.png" alt="logo.png"></a>
+            <a href="https://cloudcoding-ar.github.io" target="_blank"><img src="src/img/logo.png" alt="logo.png"></a>
             <h1>¡Bienvenido a CloudCoding!</h1>
         </header>
         <nav>
@@ -61,22 +61,22 @@
             </div>
             <ul>
                 <li>
-                    <a href="https://twitter.com/alemanashe"><img src="src/img/twitter.png" alt="link twitter"></a>
+                    <a href="https://twitter.com/alemanashe" target="_blank"><img src="src/img/twitter.png" alt="link twitter"></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/lukitaz_r/"><img src="src/img/instagram.png" alt="link instagram"></a>
+                    <a href="https://www.instagram.com/lukitaz_r/" target="_blank"><img src="src/img/instagram.png" alt="link instagram"></a>
                 </li>
                 <li>
-                    <a href="https://github.com/lukitaz-r"><img src="src/img/github.png" alt="link github"></a>
+                    <a href="https://github.com/lukitaz-r" target="_blank"><img src="src/img/github.png" alt="link github"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/lukitaz-r/"><img src="src/img/linkedin.png" alt="imagen linkedin"></a>
+                    <a href="https://www.linkedin.com/in/lukitaz-r/" target=""><img src="src/img/linkedin.png" alt="imagen linkedin"></a>
                 </li>
                 <li>
-                    <a href="tel:+543704685512"><img src="src/img/whatsapp.png" alt="link Whatsapp"></a>
+                    <a href="tel:+543704685512" target="_blank"><img src="src/img/whatsapp.png" alt="link Whatsapp"></a>
                 </li>
                 <li>
-                    <a href="mailto:lucadamianramirez10@gmail.com"><img src="src/img/gmail.png" alt="link correo electronico" name="gmail"></a>
+                    <a href="mailto:lucadamianramirez10@gmail.com" target="_blank"><img src="src/img/gmail.png" alt="link correo electronico" name="gmail"></a>
                 </li>
             </ul>
         </footer>
