--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <link rel="stylesheet" href="src/css/small.css" media="screen and (max-width: 549px)">
         <title>CloudCoding - Desarollo Web</title>
         <meta name="description" content="Hola! Somos CloudCoding, tu blog de confianza que te enseñará todo sobre el Desarrollo Web, desde HTML, CSS, Javascript, a SEO, PHP, Bases de Datos">
-        <meta name="thumbnail" content="https://cloudcoding-ar.github.io/src/img/logo.png" />
+        <meta name="thumbnail" content="https://cloudcoding-ar.github.io/src/img/logo.png">
         <meta name="keywords" content="SEO, HTML, XHTML, SEO, PHP, JavasCript, CSS, Desarrollo, Web, Desarrollo Web, Programacion">
-        <meta name="author" content="Luca Ramirez" />
-        <meta name="copyright" content="Luca Ramirez-2023" />
-        <link rel="icon" href="src/img/logo.png" type="image/png" />
+        <meta name="author" content="Luca Ramirez">
+        <meta name="copyright" content="Luca Ramirez-2023">
+        <link rel="icon" href="src/img/logo.png" type="image/png">
     </head>
     <body>
         <header>
@@ -27,7 +27,6 @@
                 <ul class="no-style horizontal">
                     <li><a href="https://cloudcoding-ar.github.io/">Página Principal</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="https://www.paypal.com/paypalme/lukitazr"><img src="" alt=""></a></li>
                 </ul>
             </div>
         </nav>
@@ -76,7 +75,7 @@
                     <a href="tel:+543704685512" target="_blank"><img src="src/img/whatsapp.png" alt="link Whatsapp"></a>
                 </li>
                 <li>
-                    <a href="mailto:lucadamianramirez10@gmail.com" target="_blank"><img src="src/img/gmail.png" alt="link correo electronico" name="gmail"></a>
+                    <a href="mailto:lucadamianramirez10@gmail.com" target="_blank"><img src="src/img/gmail.png" alt="link correo electronico"></a>
                 </li>
             </ul>
         </footer>
