--- a/servicios.html
+++ b/servicios.html
@@ -11,10 +11,10 @@
         <title>Servicios - CloudCoding</title>
         <meta name="description" content="En este apartado ofrezco mis servicios como Developer de Bots de Discord, Creador de Paginas Web y mucho mas.">
         <meta name="keywords" content="Bot, Discord, Bot de Discord, Desarrollo Web, Pagina Web, Servicios, Programación, Programacion, PayPal, Mercado Pago">
-        <meta name="thumbnail" content="https://cloudcoding-ar.github.io/src/img/logo.png" />
-        <meta name="author" content="Luca Ramirez" />
-        <meta name="copyright" content="Luca Ramirez-2023" />
-        <link rel="icon" href="src/img/logo.png" type="image/png" />
+        <meta name="thumbnail" content="https://cloudcoding-ar.github.io/src/img/logo.png">
+        <meta name="author" content="Luca Ramirez">
+        <meta name="copyright" content="Luca Ramirez-2023">
+        <link rel="icon" href="src/img/logo.png" type="image/png">
     </head>
     
     <body>
@@ -29,7 +29,6 @@
                 <ul class="no-style horizontal">
                     <li><a href="https://cloudcoding-ar.github.io" target="_blank">Página Principal</a></li>
                     <li><a href="servicios.html">Servicios</a></li>
-                    <li><a href="https://www.paypal.com/paypalme/lukitazr" target="_blank"></a></li>
                 </ul>
             </div>
     
@@ -102,7 +101,7 @@
                     <a href="tel:+543704685512" target="_blank"><img src="src/img/whatsapp.png" alt="link Whatsapp"></a>
                 </li>
                 <li>
-                    <a href="mailto:lucadamianramirez10@gmail.com" target="_blank"><img src="src/img/gmail.png" alt="link correo electronico" name="gmail"></a>
+                    <a href="mailto:lucadamianramirez10@gmail.com" target="_blank"><img src="src/img/gmail.png" alt="link correo electronico"></a>
                 </li>
             </ul>
         </footer>
